# php-lsp

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  TEST_SUITE_PLAN.md
.claude/: settings.local.json
.github/workflows/: bench.yml  ci.yml  release.yml
benches/: README.md  iai_critical.rs  index.rs  parse.rs  requests.rs  semantic.rs
benches/fixtures/: controller.php  events.php  interface_large.php  medium_class.php  repository.php  service.php  small_class.php  validator.php
benches/integration/: bench_lsp.sh  lsp_client.py
docs/: architecture.md  configuration.md  editors.md  features.md  getting-started.md  salsa-migration.md
docs/superpowers/specs/: 2026-04-04-extract-constant-design.md
mir-php/: Cargo.toml  README.md
mir-php/src/: diag.rs  infer.rs  lib.rs  main.rs  stubs.rs  types.rs  util.rs
php-lsp/: CHANGELOG.md  Cargo.toml  README.md
php-lsp/src/: ast.rs  call_hierarchy.rs  code_lens.rs  completion.rs  document_highlight.rs  document_store.rs  folding.rs  formatting.rs  generate_action.rs  implementation.rs  main.rs  moniker.rs  phpstorm_meta.rs  references.rs  type_definition.rs  type_hierarchy.rs  type_map.rs
scripts/: bench.sh  setup_laravel_fixture.sh
src/: ast.rs  autoload.rs  backend.rs  cache.rs  call_hierarchy.rs  code_lens.rs  completion.rs  declaration.rs  definition.rs  diagnostics.rs  docblock.rs  document_highlight.rs  document_link.rs  document_store.rs  extract_action.rs  extract_constant_action.rs  extract_method_action.rs  file_index.rs  file_rename.rs  folding.rs  formatting.rs  generate_action.rs  hover.rs  implement_action.rs  implementation.rs  inlay_hints.rs  inline_action.rs  inline_value.rs  lib.rs  main.rs  moniker.rs  on_type_format.rs  organize_imports.rs  phpdoc_action.rs  phpstorm_meta.rs  promote_action.rs  references.rs  rename.rs  selection_range.rs  semantic_diagnostics.rs  (+13 more)
src/completion/: keyword.rs  member.rs  mod.rs  namespace.rs  symbols.rs
src/db/: analysis.rs  class_issues.rs  codebase.rs  definitions.rs  index.rs  input.rs  method_returns.rs  mod.rs  parse.rs  refs.rs  semantic.rs  workspace_index.rs
tests/: e2e_call_hierarchy.rs  e2e_code_action_resolve.rs  e2e_code_actions.rs  e2e_code_lens.rs  e2e_completion.rs  e2e_concurrent.rs  e2e_configuration.rs  e2e_cross_file.rs  e2e_declaration.rs  e2e_definition.rs  e2e_diagnostics.rs  e2e_doc_lifecycle.rs  e2e_document_highlight.rs  e2e_document_link.rs  e2e_document_symbols.rs  e2e_file_create_stub.rs  e2e_file_notifications.rs  e2e_file_ops.rs  e2e_file_rename.rs  e2e_folding.rs  e2e_formatting.rs  e2e_hover.rs  e2e_implementation.rs  e2e_incremental.rs  e2e_inlay_hints.rs  e2e_lifecycle.rs  e2e_protocol.rs  e2e_references.rs  e2e_rename.rs  e2e_robustness.rs  e2e_selection_range.rs  e2e_semantic_tokens.rs  e2e_signature_help.rs  e2e_symbol_resolve.rs  e2e_symfony_call_hierarchy.rs  e2e_symfony_demo.rs  e2e_symfony_hover.rs  e2e_symfony_implementation.rs  e2e_symfony_navigation.rs  e2e_symfony_references.rs  (+46 more)
tests/common/: client.rs  fixture.rs  mod.rs  render.rs  server.rs
tests/fixtures/: README.md
tests/fixtures/broken-composer/: composer.json
tests/fixtures/broken-composer/src/: Thing.php
tests/fixtures/missing-psr4-dir/: composer.json
tests/fixtures/missing-psr4-dir/src/Present/: Alive.php
tests/fixtures/no-composer/src/: standalone.php
tests/fixtures/psr4-mini/: composer.json
tests/fixtures/psr4-mini/src/Model/: User.php
tests/fixtures/psr4-mini/src/Service/: Greeter.php  Registry.php
tests/fixtures/psr4-root/: composer.json
