[package]
name = "php-lsp"
version = "0.1.54"
edition = "2024"
description = "A PHP Language Server Protocol implementation"
license = "MIT"
repository = "https://github.com/jorgsowa/php-lsp"
readme = "README.md"

[lib]
name = "php_lsp"
path = "src/lib.rs"

[[bin]]
name = "php-lsp"
path = "src/main.rs"

[[bench]]
name = "parse"
harness = false

[[bench]]
name = "index"
harness = false

[[bench]]
name = "requests"
harness = false

[dependencies]
mir-analyzer = "0.4.1"
mir-issues = "0.4.1"
mir-codebase = "0.4.1"
mir-types = "0.4.1"
php-rs-parser = "0.6.2"
php-ast = "0.6.2"
bumpalo = { version = "3", features = ["collections"] }
tower-lsp = "0.20"
tokio = { version = "1", features = ["full"] }
serde_json = "1"
dashmap = "6"

[dev-dependencies]
tempfile = "3"
expect-test = "1"
criterion = { version = "0.5", features = ["html_reports"] }
