[package]
name = "php-lsp"
version = "0.1.54"
edition = "2024"
description = "A PHP Language Server Protocol implementation"
license = "MIT"
repository = "https://github.com/jorgsowa/php-lsp"
readme = "README.md"

[lib]
name = "php_lsp"
path = "src/lib.rs"

[[bin]]
name = "php-lsp"
path = "src/main.rs"

[[bench]]
name = "parse"
harness = false

[[bench]]
name = "index"
harness = false

[[bench]]
name = "requests"
harness = false

[features]
dhat-heap = ["dep:dhat"]

[dependencies]
dhat = { version = "0.3", optional = true }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
mir-analyzer = "0.6.0"
mir-issues = "0.6.0"
mir-codebase = "0.6.0"
mir-types = "0.6.0"
php-rs-parser = "0.8.0"
php-ast = "0.8.0"
bumpalo = { version = "3", features = ["collections"] }
tower-lsp = "0.20"
tokio = { version = "1", features = ["full"] }
serde_json = "1"
dashmap = "6"

[dependencies.walkdir]
version = "2"

[dev-dependencies]
tempfile = "3"
expect-test = "1"
criterion = { version = "0.8", features = ["html_reports"] }
iai-callgrind = "0.14"

[[bench]]
name = "iai_critical"
harness = false
